[gd_scene load_steps=3 format=3 uid="uid://drdn8o2eyw3yj"]

[ext_resource type="Script" path="res://exclusion_zone.gd" id="1_aknpb"]
[ext_resource type="Script" path="res://addons/delta_rollback/NetworkTimer.gd" id="2_a07go"]

[node name="ExclusionZone" type="Node2D" groups=["network_sync"]]
script = ExtResource("1_aknpb")

[node name="NetworkTimer" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_a07go")

[connection signal="timeout" from="NetworkTimer" to="." method="_on_network_timer_timeout"]
